test-suite/tests/ui/states/invalid/redundant_assign.stderr
error: state is already assigned
 --> tests/ui/states/invalid/redundant_assign.rs:8:24
  |
8 |     #[stated(assign(A, A))]
  |                        ^
